[package]
authors = ["songtianyi <tianyi@saas3.io>"]
description = "FRAME pallet to manage treasury"
edition = "2021"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "pallet-court"
readme = "README.md"
repository = "https://github.com/paritytech/substrate/"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
  "derive",
  "max-encoded-len",
]}
frame-benchmarking = {git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.40"}
frame-support = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.40"}
frame-system = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.40"}
impl-trait-for-tuples = "0.2.2"
scale-info = {version = "2.1.1", default-features = false, features = ["derive"]}
serde = {version = "1.0.136", features = ["derive"], optional = true}

pallet-balances = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.40"}

# Substrate
sp-core = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.40"}
sp-io = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.40"}
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.40"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.40"}

[dev-dependencies]
pallet-utility = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40"}
sp-core = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.40"}
sp-io = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.40"}

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks"
]
std = [
  "frame-benchmarking/std",
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "scale-info/std",
  "serde",
  "sp-runtime/std",
  "sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
